--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name="com.common.myapplication.ui.activity.VisitNetActivity" />
         <activity android:name="com.common.myapplication.ui.activity.DataBindingClass" />
         <activity android:name="com.common.myapplication.ui.activity.UseBaseVBActivity" />
+        <activity android:name="com.common.myapplication.ui.activity.ListActivity" />
 
         <meta-data
             android:name="design_width_in_dp"
