--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+apply plugin: 'com.jakewharton.butterknife'
+//⬇️这个插件会与butterknife冲突
+//apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdkVersion 30
@@ -88,15 +91,18 @@ dependencies {
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
 
-//    implementation project(path: ':lib_base')
+    implementation 'com.jakewharton:butterknife:10.2.3'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 
 
-    api('com.github.conscious01:Library_Common:1.0.0') {
-        exclude group: 'com.davemorrissey.labs'
-        exclude group: "com.google.zxing"
-    }
+    implementation project(path: ':lib_base')
 
 
+//    api('com.github.conscious01:Library_Common:1.0.1') {
+//        exclude group: 'com.davemorrissey.labs'
+//        exclude group: "com.google.zxing"
+//    }
 
 
 }
