--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name="com.common.myapplication.ui.activity.UseBaseVBActivity" />
         <activity android:name="com.common.myapplication.ui.activity.ListActivity" />
         <activity android:name="com.common.myapplication.ui.activity.StatusBarActivity" />
+        <activity android:name="com.common.myapplication.ui.activity.UseButterKnifeActivity" />
 
         <meta-data
             android:name="design_width_in_dp"
